<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <com.app.merchanttreatzasia.ui.views.AnyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x50"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_email_address_to"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/x18"
        app:typeface="@string/font_normal" />

    <com.app.merchanttreatzasia.ui.views.AnyTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/reset_password"
        android:textColor="@color/gold_color"
        android:textColorHint="@color/white"
        android:textSize="@dimen/x22"
        app:typeface="@string/font_normal" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:layout_marginEnd="@dimen/x35"
        android:layout_marginStart="@dimen/x35"
        android:layout_marginTop="@dimen/x15">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="@dimen/x15"
            android:layout_height="@dimen/x15"
            android:layout_centerVertical="true"
            android:src="@drawable/email" />

        <View
            android:id="@+id/dummyline"
            android:layout_width="1px"
            android:layout_height="@dimen/x25"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/x10"
            android:layout_marginStart="@dimen/x10"
            android:alpha="0.5"
            android:layout_toEndOf="@+id/img_email"
            android:background="@color/white" />

        <com.app.merchanttreatzasia.ui.views.AnyEditTextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/dummyline"
            android:alpha="0.7"
            android:background="@color/transparent"
            android:gravity="start"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="@dimen/x35"
        android:layout_marginStart="@dimen/x35"
        android:layout_marginTop="@dimen/x5"
        android:alpha="0.5"
        android:background="@color/white" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x35"
        android:layout_marginStart="@dimen/x35"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/x18" />
</LinearLayout>