<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/cbEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:layout_margin="@dimen/x15"
                android:padding="@dimen/x10"
                android:button="@drawable/selector_chkbox"
                android:textColor="@color/white"
                android:checked="true" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@color/border_color" />

        <RadioButton
            android:id="@+id/cbIndonesian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indonesian"
            android:layout_margin="@dimen/x15"
            android:padding="@dimen/x10"
            android:button="@drawable/selector_chkbox"
            android:textColor="@color/white"
            android:checked="false"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:alpha="0.5"
            android:background="@color/border_color"  />

            <RadioButton
                android:id="@+id/cbMalai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/malai"
                android:padding="@dimen/x10"
                android:textColor="@color/white"
                android:button="@drawable/selector_chkbox"
                android:layout_margin="@dimen/x15"
                android:checked="false"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/x15"
            android:alpha="0.5"
            android:background="@color/border_color"  />

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:layout_margin="@dimen/x20"
            android:textAllCaps="false"/>


        </RadioGroup>

    </LinearLayout>



</LinearLayout>