<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/x15">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.app.merchanttreatzasia.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totals_points_redeemed"
            android:textColor="@color/white"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <com.app.merchanttreatzasia.ui.views.AnyTextView
            android:id="@+id/txtPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="(100)"
            android:layout_marginLeft="@dimen/x10"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/x15"
        android:layout_marginBottom="@dimen/x15"
        android:background="@color/border_color" />

    <com.app.merchanttreatzasia.ui.views.AnyTextView
        android:id="@+id/txt_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x15"
        android:visibility="gone"
        app:typeface="Roboto-Regular.ttf" />

    <ListView
        android:id="@+id/lvBranchData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@color/transparent"
        android:divider="@color/transparent" />

</LinearLayout>